[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adanos"
dynamic = ["version"]
description = "Python SDK for the Adanos Finance Sentiment API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Alexander Schneider" }]
keywords = ["stocks", "sentiment", "reddit", "news", "x", "polymarket", "api", "finance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.23,<1",
  "attrs>=22.2",
  "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "respx>=0.22",
  "twine>=6",
]

[project.urls]
Homepage = "https://adanos.org"
API_Docs = "https://api.adanos.org/docs"
Documentation = "https://github.com/adanos-software/adanos-python-sdk#readme"
Repository = "https://github.com/adanos-software/adanos-python-sdk"
Issues = "https://github.com/adanos-software/adanos-python-sdk/issues"
Changelog = "https://github.com/adanos-software/adanos-python-sdk/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/adanos/"

[tool.hatch.version]
path = "src/adanos/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/adanos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
